[LBSE] Fix pattern related dynamic-updates tests https://bugs.webkit.org/show_bug.cgi?id=268610

Reviewed by Nikolas Zimmermann.

Make sure changing animated properties like x, y, width, height, etc.
invalidate the pattern.

This PR also fixes a last minute change from r273757.

* LayoutTests/platform/mac-sonoma-wk2-lbse-text/TestExpectations:
* LayoutTests/platform/mac-sonoma-wk2-lbse-text/svg/custom/pattern-size-bigger-than-target-size-expected.png: Removed.
* Source/WebCore/rendering/svg/RenderSVGResourcePattern.cpp:
(WebCore::RenderSVGResourcePattern::buildPattern):
* Source/WebCore/svg/SVGPatternElement.cpp:
(WebCore::SVGPatternElement::svgAttributeChanged):

Canonical link: https://commits.webkit.org/273985@main